--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -44,6 +44,9 @@
           イベントの説明
         </div>
         <div class="card-body">
+          <% if @event&.woman_only? %>
+            <span class="badge bg-secondary">女性限定</span>
+          <% end %>
           <%= simple_format @event.content %>
         </div>
       </div>
@@ -84,21 +87,23 @@
           <hr />
           <div class="text-center">
             <% if logged_in? %>
-              <% if !current_user.owner?(@event) %>
-                <% if current_user.attend?(@event) %>
-                  <%= link_to 'キャンセルする',
-                              event_attendance_url(@event),
-                              class: 'btn btn-primary',
-                              method: :delete,
-                              data: { confirm: 'キャンセルします' }
-                  %>
-                <% else %>
-                  <%= link_to 'このもくもく会に参加する',
-                              event_attendance_url(@event),
-                              class: 'btn btn-primary',
-                              method: :post,
-                              data: { confirm: '申し込みます' }
-                  %>
+              <% unless @event.only_woman && !current_user.woman? %>
+                <% if !current_user.owner?(@event) %>
+                  <% if current_user.attend?(@event) %>
+                    <%= link_to 'キャンセルする',
+                                event_attendance_url(@event),
+                                class: 'btn btn-primary',
+                                method: :delete,
+                                data: { confirm: 'キャンセルします' }
+                    %>
+                  <% else %>
+                    <%= link_to 'このもくもく会に参加する',
+                                event_attendance_url(@event),
+                                class: 'btn btn-primary',
+                                method: :post,
+                                data: { confirm: '申し込みます' }
+                    %>
+                  <% end %>
                 <% end %>
               <% end %>
             <% end %>
