--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -31,6 +31,12 @@
               <%= f.label :password_confirmation %>
               <%= f.password_field :password_confirmation, class: 'form-control' %>
             </div>
+
+            <div class="mb-3">
+              <%= f.label :gender %>
+              <%= f.select :gender, options_for_select(@gender_options, f.object.gender), { include_blank: '性別を選択してください' }, class: 'form-control' %>
+            </div>
+
             <div class="mb-3">
               <div class="form-check">
                 <input type="checkbox" class="form-check-input" id="agreeCheck">
@@ -39,6 +45,7 @@
 											<a href="terms-condition-page.html">Privacy Policy.</a></span></label>
               </div>
             </div>
+
             <div class="d-grid">
               <%= f.submit '登録', class: 'btn btn-primary' %>
             </div>
